# lichen

./: .gitignore  .lichen.toml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md  comment_tokens.json  flake.nix  justfile  lichen.toml  parse_languages.py  parse_spdx.py  project.ncl
.config/: project.ncl
lic/: Cargo.toml  build.rs
licenses/: 0BSD.md  3D-Slicer-1.0.md  AAL.md  ADSL.md  (+680 more)
lichen/: Cargo.toml  LICENSE
lichen/assets/: comment-tokens.json
lichen/assets/licenses/: BSD-Protection.md  BSD-Protection.template.txt  BSD-Source-Code.template.txt  BSD-Source-beginning-file.md  BSD-Source-beginning-file.template.txt  BSD-Systemics-W3Works.md  BSD-Systemics.template.txt  C-UDA-1.0.md  CAL-1.0-Combined-Work-Exception.template.txt  CAL-1.0.md  CC-BY-1.0.md  CC-BY-1.0.template.txt  CC-BY-2.5-AU.md  CC-BY-2.5-AU.template.txt  CC-BY-2.5.md  CC-BY-2.5.template.txt  CC-BY-3.0-AT.md  CC-BY-3.0-AT.template.txt  CC-BY-3.0-AU.md  CC-BY-3.0-IGO.md  CC-BY-3.0-IGO.template.txt  CC-BY-3.0-NL.md  CC-BY-3.0-NL.template.txt  CC-BY-3.0-US.md  CC-BY-3.0.md  CC-BY-3.0.template.txt  CC-BY-4.0.md  CC-BY-4.0.template.txt  CC-BY-NC-2.0.md  CC-BY-NC-2.5.md  CC-BY-NC-2.5.template.txt  CC-BY-NC-3.0-DE.md  CC-BY-NC-3.0-DE.template.txt  CC-BY-NC-3.0.md  CC-BY-NC-4.0.template.txt  CC-BY-NC-ND-1.0.template.txt  CC-BY-NC-ND-3.0-DE.md  CC-BY-NC-ND-3.0-DE.template.txt  CC-BY-NC-ND-3.0.md  CC-BY-NC-ND-3.0.template.txt  (+559 more)
lichen/src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  license.rs  main.rs  models.rs  paths.rs  utils.rs
lichen/src/commands/: apply.rs  generate.rs  init.rs  mod.rs
(+667 files in other folders)
