[package]
name = "lichen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive", "color"] }
clap-verbosity-flag = "3.0.2"
directories = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
handlebars = "6.3.2"
heck = "0.5.0"
jiff = { version = "0.2.8", features = ["serde"] }
log = "0.4.27"
markdown = "1.0.0-alpha.23"
md_to_text = "0.0.0"
metadata-gen = "0.0.1"
num_cpus = "1.16.0"
quote = "1.0.40"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
serde_regex = "1.1.0"
serde_yaml = "0.9.34"
tempfile = "3.19.1"
tokio = "1.44.2"
toml = "0.8.20"
walkdir = "2.5.0"
